<resources>
    <string name="app_name">Stegdroid</string>
    <string name="message_hint">Secret message</string>
    <string name="edit_name">Edit</string>
    <string name="select_name">Select</string>
    <string name="select_image_name">Select Image</string>
    <string name="save_name">Save</string>
    <string name="new_image_name">New Image:</string>
    <string name="selected_image_name">Selected Image</string>
    <string name="hide_name">HIDE</string>
    <string name="decode_name">Decode</string>
    <string name="title_activity_image_selection">Image_selection</string>
    <string name="Saving">saving</string>
    <string name="Info">Stegdroid is an image steganography app developed by Francisco Martiarena.\n\nTo hide a message just click the "HIDE" button, select an image with a size smaller than 2500px (either width or height), write your message and click the "SAVE" button.\n\nYour new image will be saved in the phone\'s image gallery in a folder called "Stegdroid"\n
---\nTo get the hidden message from an image just click the "DECODE" button, select the image and click the "DECODE" button again.\n\nIf you want to edit the file just click the "EDIT" button.</string>
</resources>
