<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_image_selection2">

    <ImageView
        android:id="@+id/imageView2_id"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/selected_image_name"
        android:cropToPadding="false"
        android:scaleType="fitXY"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/done_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:onClick="encode"
        android:text="@string/save_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2_id"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextMultiLineId"
        android:layout_width="355dp"
        android:layout_height="219dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/message_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/done_button_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2_id"
        app:layout_constraintVertical_bias="0.461" />


</androidx.constraintlayout.widget.ConstraintLayout>